fix(media slider): Vertically align middle on images.

--- a/app/assets/stylesheets/elements.scss
+++ b/app/assets/stylesheets/elements.scss
@@ -104,8 +104,11 @@
                 }
 
                 img {
+                    position: relative;
+                    top: 50%;
                     width: 100%;
                     min-height: 100%;
+                    transform: translateY(-50%);
                 }
 
                 .caption {
